--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- głowna treść -->
     <main>
         <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores facere dicta ad? Quidem accusantium, minus voluptates repellendus praesentium voluptas quasi beatae fugiat laboriosam blanditiis tenetur consequatur, porro velit quisquam sit.
+            KLorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores facere dicta ad? Quidem accusantium, minus voluptates repellendus praesentium voluptas quasi beatae fugiat laboriosam blanditiis tenetur consequatur, porro velit quisquam sit.
         </article>
 
         <section>
